--- a/StockBot2/Web.config
+++ b/StockBot2/Web.config
@@ -8,7 +8,7 @@
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotIdStockBot" />
     <add key="MicrosoftAppId" value="441a3ee5-5759-4fa9-898d-ab816c981e64" />
-    <add key="MicrosoftAppPassword" value="cLPYmxqdpcH36taLJEkuacm" />
+    <add key="MicrosoftAppPassword" value="ZBhvx4fEHQzcrMsOgGvb68Y" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
